Fixed spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -30,6 +30,10 @@
 }
 
 //Home
+.react-slideshow-fade-wrapper{
+    max-height: 1400px;
+}
+
 .slide-div-info{
     border: 1px solid grey;
     background-color:rgba(255, 255, 255, 0.7);
