--- a/src/styles/styles600px.scss
+++ b/src/styles/styles600px.scss
@@ -602,7 +602,7 @@ legend {
     margin: auto;
 }
 .home-section-imgs img{
-    width: 70%;
+    width: 100%;
 }
 .home-section-title{
     color: rgba(255, 150, 138, 1);
@@ -620,7 +620,7 @@ legend {
 
 .home-welcome{
     font-size: 40px;
-    padding: 75px 0px 0px 0px;
+    padding: 0px;
     font-family: Barlow-Medium;
     font-weight: normal;
 }
